style: Hide scrollbars, refactor footer to semantic tag, and fix duplicate head tag.

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,6 +1,21 @@
 /*******************************/
 /********* General CSS *********/
 /*******************************/
+/* Hide scrollbar for Chrome, Safari and Opera */
+html::-webkit-scrollbar,
+body::-webkit-scrollbar {
+  display: none;
+}
+
+/* Hide scrollbar for IE, Edge and Firefox */
+html,
+body {
+  -ms-overflow-style: none;
+  /* IE and Edge */
+  scrollbar-width: none;
+  /* Firefox */
+}
+
 body {
   color: #666666;
   background: #dddddd;
